Added Build With Parameters support. Now, it can use two urls for checking status. First would be a web url and other being jenkins api url.

--- a/resources/config/Urls.properties
+++ b/resources/config/Urls.properties
@@ -1,4 +1,6 @@
 jenkins.url=http://localhost:8181/jenkins
 status.url={jenkins.url}/api/xml?xpath=hudson/job[name=%22{0}%22]/color
+statusWeb.url=https://vibo.easydq.com/build.xml
 build.url={jenkins.url}/job/{0}/build
+buildWithParameters.url={jenkins.url}/job/{0}/buildWithParameters{1}
 minRefreshInterval=3
