--- a/resources/Yowsup/config
+++ b/resources/Yowsup/config
@@ -15,7 +15,7 @@
 ## Actual config starts below ##
 
 cc=91
-phone=919968036396
+phone=9199xxxxxx6
 id=123456789101112
-password=IB1uZdX1TpSsZ9XKeXj494agAxE=
+password=IB1uZrX1RpSsZ9YKeXj494agBxE=
 
